2005-10-29  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:
	* lib/ephy-file-chooser.c: (ephy_file_chooser_constructor):
	* lib/ephy-file-helpers.c: (ephy_file_get_downloads_dir):
	* lib/ephy-file-helpers.h:
	* src/prefs-dialog.c: (download_path_changed_cb),
	(create_download_path_button):

	Add ephy_file_get_downloads_dir() to get the actual downloads
	directory, and use it in the prefs dialogue, the filechooser, and
	the backend.

2005-10-29  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_key_press_event):

	Removed unused variable.

	* src/ephy-window.c: (ephy_window_constructor), (ephy_window_init),
	(ephy_window_set_is_popup):

	Move most of ephy_window_init code to constructor so properties are
	fully initialized before running that code.
	
2005-10-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-module.c: (ephy_module_load):

	Use G_MODULE_BIND_LAZY | G_MODULE_BIND_LOCAL when opening
	the extension module.

2005-10-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (bump_spinner_frame_cb),
	(ephy_spinner_start):

	Skip spinner update when we're not loaded. Should fix
	bug #320079.

2005-10-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:
	* embed/downloader-view.c: (status_icon_popup_menu_cb):

	Change downloader and pdm dialogue titles, bug #319843.

2005-10-25  Philip Langdale  <philipl@mail.utexas.edu>

	* src/ephy-link-action.c
	* src/ephy-link-action.h:
	(proxy_button_press_event_cb),
	(proxy_button_release_event_cb), (proxy_drag_begin_cb),
	(ephy_link_action_connect_proxy),
	(ephy_link_action_disconnect_proxy),
	(ephy_link_action_class_init), (ephy_link_action_init):

	Well, that didn't last long. Turns out this was a solved
	problem in EphyBookmarkAction but no one pointed it out
	until just now. Using gtk_button_pressed/released fixes
	everything.

2005-10-25  Philip Langdale  <philipl@mail.utexas.edu>

	* src/ephy-link-action.c