@@ -1,3 +1,9 @@
+2005-10-30  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/egg/egg-editable-toolbar.c: (create_item_from_action):
+
+	Set the action's accel group. Fixes bug #319536.
+
 2005-10-29  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/MozDownload.cpp:
